2004-01-29  JP Rosevear <jpr@ximian.com>

	* main.c: turn development stuff back on

2004-01-28  JP Rosevear <jpr@ximian.com>

	* main.c (kill_dataserver): g_message this
	(destroy_config): remove the various pieces to create a cleanish
	state for re-migrating from 1.4.x
	(main): add --force-migrate option when in development mode

2004-01-28  Rodney Dawes  <dobey@ximian.com>

	* e-task-bar.c (init): First argument to gtk_hbox_new () is a boolean,
	not an int, don't show the hbox for activities by default
	(e_task_bar_prepend_task): Show the hbox for activities when we add
	tasks to the taskbar
	(e_task_bar_remove_task): If we have no tasks left to display, don't
	show the empty hbox

2004-01-27  Rodney Dawes  <dobey@ximian.com>

	* e-task-bar.c (init): Expand the label, this fixes the problem
	that people were having in the shell window with the preview pane
	and the weird warning from ECLippedLabel for urls

	Fixes #52937 for good

2004-01-26  David Trowbridge <trowbrds@cs.colorado.edu>
 
 	* Makefile.am: add definition for EVOLUTION_HELPDIR
 
 	* e-shell-window-commands.c: add handling for new "Quick
	Reference" menu
	
2004-01-26  Not Zed  <NotZed@Ximian.com>

	* e-shell.c (attempt_upgrade, detect_version, e_shell_construct):
	attempt the upgrade before trying to startup the wizard.

	* main.c (detect_version, attempt_upgrade): move to e-shell.c
	(idle_cb): remove call to attempt_upgrade.

2004-01-26  Rodney Dawes  <dobey@ximian.com>

	* e-shell-window.c (setup_widgets): Add panded widget to
	EShellWindowPrivate and handle state saving of position (#52049)
	* e-task-bar.c (init): Switch to EClippedLabel instead of GtkLabel
	for the status bar text (#52937)

	Fixes #52049 and #52937

2004-01-26  JP Rosevear <jpr@ximian.com>

	* e-shell.c (e_shell_construct): there is no splash screen any
	more

2004-01-26  JP Rosevear <jpr@ximian.com>

	* main.c: drop now useless gtkhtml/gconf check

2004-01-23  Rodney Dawes  <dobey@ximian.com>
