@@ -1,3 +1,9 @@
+2004-02-02  Chris Toshok  <toshok@ximian.com>
+
+	* e-component-registry.c (component_info_new): don't generate a
+	g_warning if button_icon == NULL.
+	(component_info_free): unref the button_icon if it's != NULL.
+
 2004-01-29  JP Rosevear <jpr@ximian.com>
 
 	* main.c: turn development stuff back on
